--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:unit": "jest ./tests/unit/",
     "test:integration:jest": "jest ./tests/integration/",
     "test:integration": "npm run build:web:emulator && npm run build:functions &&  ./scripts/integration-test.sh",
-    "storybook": "start-storybook -s ./static -p 6006",
+    "storybook": "npm run build-storybook && start-storybook -s ./static -p 6006",
     "build-storybook": "build-storybook"
   },
   "devDependencies": {
@@ -34,10 +34,10 @@
     "@rollup/plugin-node-resolve": "^13.0.4",
     "@rollup/plugin-replace": "^2.4.1",
     "@storybook/addon-actions": "^6.3.7",
-    "@storybook/addon-docs": "^6.3.7",
     "@storybook/addon-essentials": "^6.3.7",
     "@storybook/addon-links": "^6.3.7",
     "@storybook/addon-svelte-csf": "^1.1.0",
+    "@storybook/svelte": "^6.3.7",
     "@sveltejs/adapter-static": "^1.0.0-next.14",
     "@sveltejs/kit": "1.0.0-next.141",
     "@types/eslint": "^7.28.0",
@@ -68,7 +68,8 @@
     "selenium-webdriver": "^4.0.0-alpha.7",
     "sinon-chrome": "^3.0.1",
     "source-map-support": "^0.5.19",
-    "svelte": "^3.38.2",
+    "storybook-builder-vite": "^0.0.12",
+    "svelte": "^3.42.4",
     "svelte-check": "^2.0.0",
     "svelte-loader": "^3.1.2",
     "svelte-preprocess": "^4.0.0",
@@ -81,7 +82,6 @@
     "webextension-polyfill-ts": "^0.26.0"
   },
   "dependencies": {
-    "@storybook/svelte": "^6.3.7",
     "firebase": "^9.0.0-beta.7",
     "firebase-tools": "^9.16.0",
     "sirv-cli": "^1.0.10",
