--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,6 @@ jobs:
 
   # This deploys directly to our dev site at https://rally-web-spike.web.app
   dev-site-deploy:
-    context: rally-test-context
     docker:
       - image: cimg/node:15.1
     steps:
@@ -82,12 +81,14 @@ workflows:
   # Inside the workflow, you provide the jobs you want to run, e.g this workflow runs the build-and-test job above.
   # CircleCI will run this workflow on every commit.
   # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows
+  version: 2
   build:
     jobs:
       - build-and-test
       # For running simple node tests, you could optionally use the node/test job from the orb to replicate and replace the job above in fewer lines.
       # - node/test
       - dev-site-deploy:
+          context: rally-test-context
           requires:
             - build-and-test
           filters:
