--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
           command: git checkout deploy && git pull --rebase origin deploy
       - run:
           name: Create Service Account key JSON.
-          command: echo $GSA_KEY > "$HOME"/gcloud.json
+          command: echo $GSA_KEY | base64 --decode --ignore-garbage > "$HOME"/gcloud.json
       - run:
           name: Install Firebase Tools needed for deploy.
           command: npm install firebase-tools firebase-functions
