--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,8 +55,15 @@ jobs:
       - store_artifacts:
           path: ./screenshots
 
-  # This deploys directly to our dev site at https://rally-web-spike.web.app
-  dev-site-deploy:
+  # This deploys directly to our dev site at https://apilly-sandbox-project-dev.app
+  site-deploy:
+    parameters:
+      project_name:
+        type: string
+        default: apilly-sandbox-project-dev
+      service_account:
+        type: string
+        default: $GSA_DEV_KEY
     docker:
       - image: cimg/node:15.1
     steps:
@@ -66,16 +73,16 @@ jobs:
           command: git checkout deploy && git pull --rebase origin deploy
       - run:
           name: Create Service Account key JSON.
-          command: echo $GSA_KEY | base64 --decode --ignore-garbage > "$HOME"/gcloud.json
+          command: echo << parameters.service_account >> | base64 --decode --ignore-garbage > "$HOME"/gcloud.json
       - run:
           name: Install Firebase Tools needed for deploy.
           command: npm install firebase-tools firebase-functions
       - run:
           name: Configure Firebase for the deployment project name.
-          command: GOOGLE_APPLICATION_CREDENTIALS="$HOME"/gcloud.json ./node_modules/.bin/firebase use --add apilly-sandbox-project-dev && cp config/firebase.config.apilly-sandbox-project-dev.json build/firebase.config.json
+          command: GOOGLE_APPLICATION_CREDENTIALS="$HOME"/gcloud.json ./node_modules/.bin/firebase use --add << parameters.project_name >> && cp config/firebase.config.<< parameters.project_name >>.json build/firebase.config.json
       - run:
           name: Firebase Deploy.
-          command: GOOGLE_APPLICATION_CREDENTIALS="$HOME"/gcloud.json ./node_modules/.bin/firebase deploy --project apilly-sandbox-project-dev
+          command: GOOGLE_APPLICATION_CREDENTIALS="$HOME"/gcloud.json ./node_modules/.bin/firebase deploy --project << parameters.project_name >>
 workflows:
   # Below is the definition of your workflow.
   # Inside the workflow, you provide the jobs you want to run, e.g this workflow runs the build-and-test job above.
@@ -87,7 +94,7 @@ workflows:
       - build-and-test
       # For running simple node tests, you could optionally use the node/test job from the orb to replicate and replace the job above in fewer lines.
       # - node/test
-      - dev-site-deploy:
+      - site-deploy:
           context: rally-test-context
           requires:
             - build-and-test
