--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,7 @@ jobs:
         default: rally-web-stage
       service_key:
         type: string
-        default: $GCLOUD_STAGE_SERVICE_KEY
+        #default: $GCLOUD_STAGE_SERVICE_KEY
     docker:
       - image: cimg/node:15.1
     steps:
@@ -129,7 +129,7 @@ workflows:
           context: rally-web
           project_name: $PROJECT_ID_STAGE
           project_config: rally-web-stage
-          service_key: $GCLOUD_STAGE_SERVICE_KEY
+          service_key: $GCLOUD_STAGE_MANUAL_SERVICE_KEY
           requires:
             - deploy-branch-update
           filters:
